--- a/neo4j-core.conf
+++ b/neo4j-core.conf
@@ -12,5 +12,5 @@ causal_clustering.minimum_core_cluster_size_at_formation=3
 causal_clustering.minimum_core_cluster_size_at_runtime=3
 
 causal_clustering.discovery_type=K8S
-causal_clustering.kubernetes.label_selector=node-type:initial-core
+causal_clustering.kubernetes.label_selector=node-type=initial-core
 causal_clustering.kubernetes.service_port_name=5000
