--- a/neo4j-core.conf
+++ b/neo4j-core.conf
@@ -12,7 +12,7 @@ causal_clustering.minimum_core_cluster_size_at_formation=3
 causal_clustering.minimum_core_cluster_size_at_runtime=3
 
 causal_clustering.discovery_type=K8S
-causal_clustering.discovery_advertised_address=node-discovery-service.crud-dev.svc.cluster.local
+causal_clustering.discovery_advertised_address=node-discovery-service.crud-dev.svc.cluster.local:5000
 
 causal_clustering.kubernetes.address=node-discovery-service.crud-dev.svc.cluster.local:5000
 causal_clustering.kubernetes.service_port_name=5000
