--- a/neo4j-core.conf
+++ b/neo4j-core.conf
@@ -1,6 +1,7 @@
 AUTH=neo4j/neo4j
 
 dbms.connectors.default_listen_address=0.0.0.0
+dbms.connectors.default_advertised_address=$HOSTNAME.discovery-service.crud-dev.svc.cluster.local
 dbms.mode=CORE
 
 dbms.connector.http.listen_address=:7474
@@ -11,8 +12,8 @@ causal_clustering.minimum_core_cluster_size_at_formation=3
 causal_clustering.minimum_core_cluster_size_at_runtime=3
 
 causal_clustering.discovery_type=K8S
-causal_clustering.discovery_advertised_address=172.24.179.62:5000
+causal_clustering.discovery_advertised_address=discovery-service.crud-dev.svc.cluster.local:5000
 
-causal_clustering.kubernetes.address=172.24.179.62:5000
+causal_clustering.kubernetes.address=discovery-service.crud-dev.svc.cluster.local:5000
 causal_clustering.kubernetes.service_port_name=5000
 causal_clustering.kubernetes.label_selector=node-type=initial-core
