--- a/neo4j-core.conf
+++ b/neo4j-core.conf
@@ -11,7 +11,7 @@ dbms.connector.bolt.listen_address=:7687
 causal_clustering.minimum_core_cluster_size_at_formation=3
 causal_clustering.minimum_core_cluster_size_at_runtime=3
 
-causal_clustering.discovery_type=K8S
+causal_clustering.initial_discovery_members=test.discovery-service.crud-dev.svc.cluster.local:5000,test2.discovery-service.crud-dev.svc.cluster.local:5000,test3.discovery-service.crud-dev.svc.cluster.local:5000
 causal_clustering.discovery_advertised_address=discovery-service.crud-dev.svc.cluster.local:5000
 
 causal_clustering.kubernetes.address=discovery-service.crud-dev.svc.cluster.local:5000
