--- a/neo4j-core.conf
+++ b/neo4j-core.conf
@@ -14,5 +14,5 @@ causal_clustering.discovery_type=K8S
 causal_clustering.discovery_advertised_address=172.24.179.62:5000
 
 causal_clustering.kubernetes.address=172.24.179.62:5000
-causal_clustering.kubernetes.service_port_name=5000
+causal_clustering.kubernetes.service_port_name=discovery
 causal_clustering.kubernetes.label_selector=node-type=initial-core
