--- a/neo4j-core.conf
+++ b/neo4j-core.conf
@@ -13,5 +13,6 @@ causal_clustering.minimum_core_cluster_size_at_runtime=3
 causal_clustering.discovery_type=K8S
 causal_clustering.discovery_advertised_address=discovery-service.crud-dev.svc.cluster.local:5000
 
+causal_clustering.kubernetes.address=discovery-service.crud-dev.svc:443
 causal_clustering.kubernetes.service_port_name=discovery
 causal_clustering.kubernetes.label_selector=node-type=initial-core
