--- a/neo4j-core.conf
+++ b/neo4j-core.conf
@@ -1,6 +1,7 @@
 AUTH=neo4j/neo4j
 
 dbms.connectors.default_listen_address=0.0.0.0
+#dbms.connectors.default_advertised_address=core1
 dbms.mode=CORE
 
 dbms.connector.http.listen_address=:7474
