--- a/neo4j-core.conf
+++ b/neo4j-core.conf
@@ -8,11 +8,16 @@ dbms.connector.http.listen_address=:7474
 dbms.connector.https.listen_address=:6477
 dbms.connector.bolt.listen_address=:7687
 
+
 causal_clustering.minimum_core_cluster_size_at_formation=3
 causal_clustering.minimum_core_cluster_size_at_runtime=3
 
 causal_clustering.discovery_type=K8S
+causal_clustering.discovery_listen_address=0.0.0.0:5000
 causal_clustering.discovery_advertised_address=discovery-service.crud-dev.svc.cluster.local:5000
+causal_clustering.raft_listen_address=0.0.0.0:7000
+causal_clustering.transaction_listen_address=0.0.0.0:6000
 
+causal_clustering.kubernetes.address=kubernetes.default.svc:443
 causal_clustering.kubernetes.service_port_name=discovery
 causal_clustering.kubernetes.label_selector=node-type=initial-core
