--- a/neo4j-core.conf
+++ b/neo4j-core.conf
@@ -1,24 +1,22 @@
-AUTH=neo4j/neo4j
+dbms.mode=CORE
 
-dbms.mode=CORE\n
+dbms.connectors.default_listen_address=0.0.0.0
+dbms.connectors.default_advertised_address=$(hostname -i)
+dbms.connector.bolt.advertised_address=:7687
+dbms.connector.http.advertised_address=:7474
+dbms.connector.https.advertised_address=:6477
 
-dbms.connectors.default_listen_address=0.0.0.0\n
-dbms.connectors.default_advertised_address=$(hostname -i)\n
-dbms.connector.bolt.advertised_address=:7687\n
-dbms.connector.http.advertised_address=:7474\n
-dbms.connector.https.advertised_address=:6477\n
+causal_clustering.discovery_type=DNS
+causal_clustering.initial_discovery_members=ongdb-headless.crud-dev:5000
 
-causal_clustering.discovery_type=DNS\n
-causal_clustering.initial_discovery_members=ongdb-headless.crud-dev:5000\n
+dbms.connector.http.listen_address=:7474
+dbms.connector.https.listen_address=:6477
+dbms.connector.bolt.listen_address=:7687
 
-dbms.connector.http.listen_address=:7474\n
-dbms.connector.https.listen_address=:6477\n
-dbms.connector.bolt.listen_address=:7687\n
-
-causal_clustering.discovery_listen_address=0.0.0.0:5000\n
-causal_clustering.transaction_listen_address=0.0.0.0:6000\n
-causal_clustering.raft_listen_address=0.0.0.0:7000\n
+causal_clustering.discovery_listen_address=0.0.0.0:5000
+causal_clustering.transaction_listen_address=0.0.0.0:6000
+causal_clustering.raft_listen_address=0.0.0.0:7000
 
 
-causal_clustering.minimum_core_cluster_size_at_formation=3\n
-causal_clustering.minimum_core_cluster_size_at_runtime=3\n
+causal_clustering.minimum_core_cluster_size_at_formation=3
+causal_clustering.minimum_core_cluster_size_at_runtime=3
